LayoutTests/http/tests/misc/ftp-eplf-directory.py
@@ -1,0 +1,12 @@
+#!/usr/bin/env python3
+
+import os
+import sys
+
+
+sys.stdout.write(
+    'Content-type: application/x-ftp-directory\n\n'
+    '+i8388621.48594,m825718503,r,s280,\tIn order to pass there must be a directory entry below here\r\n'
+    '+i8388621.50690,m824255907,/,\tdirectory\r\n'
+    '+i8388621.48598,m824253270,r,s612,\tthird entry\r\n'
+)
